--- a/apps/products/package.json
+++ b/apps/products/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "faker": "^5.1.0",
-    "html-webpack-plugin": "^4.5.0",
-    "webpack": "^5.4.0",
+    "html-webpack-plugin": "^5.2.0",
+    "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.0"
+  },
+  "devDependencies": {
+    "@types/webpack": "^4.41.26"
   }
 }
