--- a/apps/cart/package.json
+++ b/apps/cart/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "host",
+  "name": "cart",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,15 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "faker": "^4.1.0",
     "html-webpack-plugin": "^5.2.0",
-    "nodemon": "^2.0.7",
     "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
-    "@types/webpack": "^4.41.26",
-    "ts-loader": "^8.0.17",
-    "typescript": "^4.1.5"
+    "@types/webpack": "^4.41.26"
   }
 }
